Modified comments To accurately reflect the code because comments were from previous version of the code.

--- a/Demo1.3.ipynb
+++ b/Demo1.3.ipynb
@@ -338,7 +338,7 @@
     "    W2 = tf.get_variable(\"W2\", [10, n_h], initializer=tf.contrib.layers.xavier_initializer(seed=0))\n",
     "    b2 = tf.get_variable(\"b2\", [10, 1], initializer = tf.zeros_initializer())\n",
     "    \n",
-    "    # Layer 3 (10 neurons)\n",
+    "    # Layer 3 (25 neurons)\n",
     "    W3 = tf.get_variable(\"W3\", [25, 10], initializer=tf.contrib.layers.xavier_initializer(seed=0))\n",
     "    b3 = tf.get_variable(\"b3\", [25, 1], initializer = tf.zeros_initializer())\n",
     "    \n",
@@ -346,7 +346,7 @@
     "    W4 = tf.get_variable(\"W4\", [10, 25], initializer=tf.contrib.layers.xavier_initializer(seed=0))\n",
     "    b4 = tf.get_variable(\"b4\", [10,1], initializer = tf.zeros_initializer())\n",
     "    \n",
-    "    # Layer 5 (10 neurons)\n",
+    "    # Layer 5 (5 neurons)\n",
     "    W5 = tf.get_variable(\"W5\", [5, 10], initializer=tf.contrib.layers.xavier_initializer(seed=0))\n",
     "    b5 = tf.get_variable(\"b5\", [5,1], initializer = tf.zeros_initializer())\n",
     "    \n",
@@ -544,7 +544,7 @@
    "source": [
     "def forward_propagation(X, parameters):\n",
     "    \"\"\"\n",
-    "    Implements the forward propagation for the model: LINEAR -> RELU -> LINEAR -> RELU -> LINEAR -> RELU -> LINEAR -> SOFTMAX\n",
+    "    Implements the forward propagation for the model:\n",
     "    \n",
     "    Arguments:\n",
     "    X -- input dataset placeholder, of shape (input size, number of examples)\n",
